--- a/content/posts/童年.md
+++ b/content/posts/童年.md
@@ -2,7 +2,7 @@
 date = '2025-11-28T22:42:09+08:00'
 draft = false
 title = '童年'
-categories = [文章]
+categories = ['文章']
 +++
 我对童年的记忆不是很多，大多数的事情都记不清楚了。每次提到童年，似乎总有很多记忆丢失掉了。童年，似乎一切都很模糊。
 我的爸爸妈妈，都不是那种会有生活仪式感的父母。所以到现在，我也不知道我到底是什么时间出生，家里也没有什么小时候的照片。从小我就会羡慕那种家里有一个大影集，拿出来可以翻半天，讲每一个照片故事的家庭。
