--- a/content/posts/童年.md
+++ b/content/posts/童年.md
@@ -4,7 +4,7 @@ draft = false
 title = '童年'
 categories = ['文章']
 +++
-我出生在东北的农村。对于童年，记忆不是很多，大多数的事情都记不清楚了。一切都很模糊。
+我出生在东北的农村。对于童年，记忆不是很多，大多数的事情也都记不清楚了。一切都很模糊。
 
 我爸爸是名老师，妈妈在广播站做播音员，没有编制，后来在东北的下岗潮时下岗了。后来在我爸工作的学校开了个食杂店，做了大约 10 年。
 
@@ -16,7 +16,7 @@ categories = ['文章']
 从小的印象里，我爸一直是个脾气很暴躁的人，我妈是个相对的独立却又很软弱的人。我的性格，受到了他们两个特别大的影响。
 
 我小时候的家，是个自建的砖瓦房，一家人挤在一起，睡在一个炕上，大家能看到互相之间的一举一动。我爸是个对别人要求极为严苛的人，甚至有些偏执和变态。我很难做到他希望的样子。所以挨骂，挨打就是家常便饭。
-一次不记得什么原因了，我被他拿着烧火棍一顿胖揍，整个屁股都是紫青色，持续了很久不敢踏实的坐在凳子上。另外一次，是因为家里聚餐之后，我没有送姑姑家的小妹妹回家，被抽了无数个嘴巴，到现在我也忘不了当时我爸那张因为愤怒扭曲的脸，和毫不犹豫落下的巴掌。我不知道他是不是还记得这件大约 30 年前的事，但是这件事确实成为了我的心魔。在一段我最难熬的日子里，每天夜里都会梦到被他打骂，会哭醒，然后自己在洗手间抱头痛哭。我一直都不明白，为什么因为一件非常普通，并且没有造成任何后果的事情，可以对自己的孩子下那么狠的手，以至于让我在那么多年后，仍然能记忆犹新。
+一次不记得什么原因了，我被他拿着烧火棍一顿胖揍，整个屁股都是紫青色，持续了很久不敢踏实的坐在凳子上。另外一次，是因为家里聚餐之后，我没有送姑姑家的小妹妹回家，被抽了无数个嘴巴，到现在我也忘不了当时我爸那张因为愤怒扭曲的脸，和毫不犹豫落下的巴掌。我不知道他是不是还记得这件大约 30 年前的事，但是这件事确实成为了我的心魔。在一段我最难熬的日子里，每天夜里都会梦到被他打骂，会哭醒，然后自己在洗手间嚎啕痛哭。我一直都不明白，为什么因为一件非常普通，并且没有造成任何后果的事情，可以对自己的孩子下那么狠的手，以至于让我在那么多年后，仍然能记忆犹新。
 
 当然，对于爸爸的记忆，也不会完全都是这种坏事。他也曾在某一个冬天，用爬犁拉着我在雪地里玩，这应该是非常非常难得的亲子时光。
 
