--- a/content/posts/上学了.md
+++ b/content/posts/上学了.md
@@ -4,6 +4,17 @@ draft = false
 title = '上学了'
 categories = ['文章']
 +++
-7 岁的时候，我上小学了。记得好像是不符合东北的入学年纪，我爸硬把我塞到了学校，当了个插班生。那时候我是班级里唯一一个不能领新书，领校服的学生。我需要在新学期第一天放学到家之后，拿到我爸找人弄到的一套新书。小孩子之间，都是有攀比心的，当时真的太羡慕能在座位上拿到新书的同学了。
 
-我的老师们，要么是我爸的朋友、同学、学生，要么是我们家的亲戚。从上学的那一刻，一举一动都能及时的反馈到我爸妈那里，所以我一直也不敢有太过分的行为。可能因为贪玩是小孩子的天性，也可能是我太懒惰，拖延，我一度学会了撒谎，尝试用谎言弥补没写作业的漏洞。无一例外，每次都会被识破。最严重的一次，我爸我把我的书包，塞到了炕洞里，说要烧掉它，以后别上学了。当然，最后还是以一顿打骂告终。爸妈的高压教育，并没有让我的成绩变好，反倒让我更贪玩，想更多幼稚的借口撒谎。
+--没有新书的新学期
+7 岁的时候，我开始上小学了。当时在东北，好像当时我还没有到上学的年纪，但是我爸还是我把我塞到了学校，似乎当时连学籍都没有。
+当时每学年开学，我都没办法在学校领到新书，甚至有时候已经正式开课了，我依然需要和同学分享课本。小孩子在这种事上，总会有用不完的虚荣心，所以这就变成了我的意难平，持续了我整个的小学阶段。直到小学毕业之前，我的学籍才搞定，但是那会，已经不再在这件事上有什么执念了。
+
+--红领巾和共青团员
+我的整个小学和初中，几乎所有的老师，要么是我家的亲戚，要么是我爸的朋友、朋友的朋友，或者是他的学生。所以我过的并不自由。但是好处是，可以得到很多额外的关照。对于小学记忆最深的两件事，一个是入队，一个是入团。似乎这两件事，对于一个孩子来说，永远充满了诱惑和向往。大约在二、三年级的时候，终于有一天，我的班主任，也是我的一个表婶说，我可以戴红领巾了。当时那种狂喜，真的很难表述，当然，这里面更多的是虚荣心，“装逼”这种事，在每一个年龄段都在持续的表现着。
+但是很快，冷水就从头泼到了脚，爸妈不同意，懦弱的我，也丝毫不敢与他们抗争，默默的接受了这个结果。再后来，红领巾从布质的改成了绸质的，我还是得到了它，只是我已经不再会为它感到欣喜了。大约在六年级的时候，开始发展入团，历史再次重演，我还是那个不敢表露心声的孩子。
+那会年纪小，并不懂得那么多的人情世故，如果放到现在，我应该会更好接受一些。但是爸妈只是在用他们的处世经验替我做了一个又一个的决定，从来没有告诉过我诸如你为什么不能接受这个好处。
+
+--好学生，坏学生和我的向往
+老师和家长们习惯用成绩来评判孩子的好与坏。可能得益于我爸的原因，整个小学和初中，我并没有被归类到坏学生，而被放弃。
+小学的时候，每周一都有升旗仪式，会有几名同学做为旗手，还有广播站的小主持朗诵一些已经忘记内容的东西。那时我真的无比向往这两个角色，但是很可惜的是，我没被选中过。原因我也不知道。小学的前五年，我一直成绩平平，发挥好了，可能班级前五名，发挥不到，就十名开外。成绩好的时候不一定有奖励，但是成绩不好的时候，挨打挨骂肯定是跑不了了。直到小升初的考试，我记得太清楚了，数学 98 分，语文 89 分，年纪第一。当时我妈给我买了个 BB 机外观的电子表，我宝贝了好几年。那是我唯一一次因为成绩好，得到了物质奖励。
+上了初中之后，又开始了我的成绩平平之路。转折发生在初三的某一次模拟考。当时语文的作文题目是“请以向往为题，完成一篇作文”。当时我都不知道哪里来的灵感，十多岁的我，写了类似一篇散文，从呱呱坠地，向往到了入土为安。那一次我得到了语文最高分 118 分。据说我的老师特意把那篇作文送到了我爸的办公室去夸我。从这次模拟考之后，我初中的成绩开始稳步上升，但是还是因为偏科，拖垮了我的中考成绩。
